Refactored rendering code into WorldRenderer class

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -44,12 +44,14 @@ set(client_sources
   ${source_dir}/main.cpp
   ${source_dir}/camera.cpp
   ${source_dir}/chunk.cpp
+  ${source_dir}/worldRenderer.cpp
 )
 
 set(clientHeaders
    ${headers_dir}/client.hpp
    ${headers_dir}/camera.hpp
    ${headers_dir}/chunk.hpp
+   ${headers_dir}/worldRenderer.hpp
 )
 
 if(APPLE)
